// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Incident Map should render without crashing 1`] = `
<Map
  center={
    Object {
      "lat": 12,
      "lng": 120,
    }
  }
  className="mapClassName"
  length={4}
  onClick={[MockFunction]}
  onLocationfound={[MockFunction]}
  zoom={13}
>
  <ForwardRef(Leaflet(TileLayer))
    attribution="&copy <a href=\\"http://osm.org/copyright\\">OpenStreetMap</a> contributors"
    url="https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png"
  />
  <ForwardRef(Leaflet(Marker))
    draggable={true}
    position={
      Object {
        "lat": 12,
        "lng": 120,
      }
    }
  >
    <ForwardRef(Leaflet(Popup))>
       
      Current location:
      <pre>
        {
  "lat": 12,
  "lng": 120
}
      </pre>
    </ForwardRef(Leaflet(Popup))>
  </ForwardRef(Leaflet(Marker))>
</Map>
`;

exports[`View Incident Map should render without crashing 1`] = `
<Map
  center={
    Object {
      "lat": 23,
      "lng": 24,
    }
  }
  className="mapClassName"
  length={4}
  zoom={13}
>
  <ForwardRef(Leaflet(TileLayer))
    attribution="&copy <a href=\\"http://osm.org/copyright\\">OpenStreetMap</a> contributors"
    url="https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png"
  />
  <ForwardRef(Leaflet(Marker))
    draggable={true}
    position={
      Object {
        "lat": 23,
        "lng": 24,
      }
    }
  >
    <ForwardRef(Leaflet(Popup))>
       
      Current location:
      <pre>
        {
  "lat": 23,
  "lng": 24
}
      </pre>
    </ForwardRef(Leaflet(Popup))>
  </ForwardRef(Leaflet(Marker))>
</Map>
`;
